force-app/main/default/objects/AIQZilliantPermissionsConfig__c/AIQZilliantPermissionsConfig__c.object-meta.xml
<CustomObject>
    <label>AIQ Permissions Config</label>
    <nameField>
        <displayFormat>SEC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AIQ Permissions Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>