force-app/main/default/objects/AIQZilliantPermissionsConfig__c/fields/AssignmentGroupName__c.field-meta.xml
<CustomField>
    <fullName>AssignmentGroupName__c</fullName>
    <externalId>true</externalId>
    <label>Assignment Group Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>