force-app/main/default/objects/AIQZilliantPermissionsConfig__c/fields/AssignmentGroupType__c.field-meta.xml
<CustomField>
    <fullName>AssignmentGroupType__c</fullName>
    <defaultValue>&quot;Profile&quot;</defaultValue>
    <label>Assignment Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>UserRole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>