force-app/main/default/objects/AIQZilliantPermissionsConfig__c/fields/PermissionSetsToAssign__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetsToAssign__c</fullName>
    <description>line separated list of permission sets that have to be assigned to the group of users</description>
    <inlineHelpText>line separated list of permission sets that have to be assigned to the group of users</inlineHelpText>
    <label>Permission Sets To Assign</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>