force-app/main/default/objects/AIQZilliantPermissionsConfig__c/fields/PermissionSetsToUnassign__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetsToUnassign__c</fullName>
    <description>line separated list of permission sets that have to be unassigned for the group of users</description>
    <inlineHelpText>line separated list of permission sets that have to be unassigned for the group of users</inlineHelpText>
    <label>Permission Sets To Unassign</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>