force-app/main/default/objects/AIQZilliantPermissionsConfig__c/listViews/AIQ_Permission_Configs_for_Deal_Manager.listView-meta.xml
<ListView>
    <fullName>AIQ_Permission_Configs_for_Deal_Manager</fullName>
    <columns>NAME</columns>
    <columns>AssignmentGroupName__c</columns>
    <columns>IsActivated__c</columns>
    <filterScope>Everything</filterScope>
    <label>AIQ Permission Configs for Deal Manager</label>
</ListView>