force-app/main/default/objects/AIQZilliantPermissionsConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssignmentGroupName__c</columns>
    <columns>AssignmentGroupType__c</columns>
    <columns>IsActivated__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>